src/exporter/treetagger/snapshots/annatto__exporter__treetagger__tests__core_no_metadata.snap
---
source: src/exporter/treetagger/tests.rs
expression: export.unwrap()
---
---- doc1.tt:
<something something="annotated">
Is	VBZ	be
this	DT	this
<anotherthing anotherthing="annotated" evenmore="&lt;unknown-values&gt;">
example	NN	example
</something>
more	RBR	more
</anotherthing>
complicated	JJ	complicated
<span>
than	IN	than
</span>
it	PP	it
appears	VBZ	appear
to	TO	to
be	VB	be
?	SENT	?
