src/exporter/treetagger/snapshots/annatto__exporter__treetagger__tests__core_no_spans.snap
---
source: src/exporter/treetagger/tests.rs
expression: export.unwrap()
---
---- doc1.tt:
<doc author="&lt;unknown&gt;" year="1984">
Is	VBZ	be
this	DT	this
example	NN	example
more	RBR	more
complicated	JJ	complicated
than	IN	than
it	PP	it
appears	VBZ	appear
to	TO	to
be	VB	be
?	SENT	?
</doc>
