src/exporter/treetagger/snapshots/annatto__exporter__treetagger__tests__segmentation_without_tok_label.snap
---
source: src/exporter/treetagger/tests.rs
expression: export.unwrap()
---
---- doc1.tt:
<doc author="&lt;unknown&gt;" year="1984">
An		
other		
example		
text		
</doc>
